[package]
name = "ask-ai"
version = "0.1.2"
edition = "2021"
description = "AI driven shell command helper"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
colored = "2.1"
anyhow = "1.0"
toml = "0.8"
regex = "1.10"
ratatui = "0.26"
crossterm = "0.27"
dialoguer = "0.11.0"
console = "0.15.7"
dirs = "5.0"
